test_data/end_to_end/err__use_missing_inherent_associated_items/stderr.txt
error: expected module
  --> main.cz:7:5
7 | use S::*;
        ~

error: expected module
  --> main.cz:8:9
8 | use m1::S::*;
            ~

error: expected module
  --> main.cz:10:9
10 | use m1::S::*;
             ~

error: expected module
  --> main.cz:11:9
11 | use m1::S::{};
             ~

error: can't import associated items
  --> main.cz:12:12
12 | use m1::S::x;
                ~

error: can't import associated items
  --> main.cz:13:14
13 | use m1::{S::{foo, bar::x}};
                  ~~~

error: can't import associated items
  --> main.cz:13:24
13 | use m1::{S::{foo, bar::x}};
                            ~

error: can't import associated items
  --> main.cz:14:13
14 | use m1::{S::foobar, S::barfoo};
                 ~~~~~~

error: can't import associated items
  --> main.cz:14:24
14 | use m1::{S::foobar, S::barfoo};
                            ~~~~~~

error: expected module
  --> main.cz:17:10
17 | use std::char::*;
              ~~~~

error: expected module
  --> main.cz:18:10
18 | use std::char::{};
              ~~~~

error: can't import associated items
  --> main.cz:19:16
19 | use std::char::charbar;
                    ~~~~~~~

error: expected module
  --> main.cz:20:18
20 | use std::string::String::*;
                      ~~~~~~

error: expected module
  --> main.cz:21:18
21 | use std::string::String::{};
                      ~~~~~~

error: can't import associated items
  --> main.cz:22:26
22 | use std::string::String::stringbar;
                              ~~~~~~~~~

error: expected module
  --> main.cz:25:14
25 |     use std::char::*;
                  ~~~~

error: expected module
  --> main.cz:26:14
26 |     use std::char::{};
                  ~~~~

error: can't import associated items
  --> main.cz:27:20
27 |     use std::char::charbar;
                        ~~~~~~~

error: expected module
  --> main.cz:28:22
28 |     use std::string::String::*;
                          ~~~~~~

error: expected module
  --> main.cz:29:22
29 |     use std::string::String::{};
                          ~~~~~~

error: can't import associated items
  --> main.cz:30:30
30 |     use std::string::String::stringbar;
                                  ~~~~~~~~~

error: expected module
  --> main.cz:34:22
34 |     use std::string::String::*;
                          ~~~~~~

error: expected module
  --> main.cz:35:14
35 |     use std::char::*;
                  ~~~~

error: expected module
  --> main.cz:36:14
36 |     use std::char::{};
                  ~~~~

error: can't import associated items
  --> main.cz:37:20
37 |     use std::char::charbar;
                        ~~~~~~~

error: expected module
  --> main.cz:38:22
38 |     use std::string::String::*;
                          ~~~~~~

error: expected module
  --> main.cz:39:22
39 |     use std::string::String::{};
                          ~~~~~~

error: can't import associated items
  --> main.cz:40:30
40 |     use std::string::String::stringbar;
                                  ~~~~~~~~~

error: name `m3` is defined multiple times
  --> main.cz:43:8
43 | module m3 {
            ~~

error: expected module
  --> main.cz:44:14
44 |     use std::char::{};
                  ~~~~

error: can't import associated items
  --> main.cz:45:20
45 |     use std::char::charbar;
                        ~~~~~~~

error: expected module
  --> main.cz:46:22
46 |     use std::string::String::{};
                          ~~~~~~

error: can't import associated items
  --> main.cz:47:30
47 |     use std::string::String::stringbar;
                                  ~~~~~~~~~
